--- a/DeviceManagerSystem/Properties/Resources.resx
+++ b/DeviceManagerSystem/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CLDPicContentLz2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\x86\Release\images\CLDPicContentLz2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CLDPicMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\images\CLDPicMain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,7 +139,7 @@
   <data name="XiAnPicMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\images\pics\XiAnPicMain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CLDPicContentLz2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\x86\Release\images\CLDPicContentLz2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="login3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\x86\Release\images\login3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
